// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Contact matches snapshot (dark mode) 1`] = `
<div>
  <section
    class="css-fn3470"
    data-testid="contact-section"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
    >
      <div>
        <div>
          <h2
            class="css-2rtxge"
          >
            Get In Touch
          </h2>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1pm1n2o-MuiTypography-root"
          >
            Have a project in mind or just want to say hello? Drop me a message and I'll get back to you as soon as possible.
          </p>
        </div>
        <div>
          <div
            class="MuiBox-root css-1wgct4y"
          >
            <div
              class="MuiBox-root css-zt8mqb"
            >
              <div
                class="MuiBox-root css-1rmagb3"
              >
                <svg
                  fill="none"
                  height="80"
                  style="margin: 0px auto 16px; display: block;"
                  viewBox="0 0 24 24"
                  width="80"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 2L11 13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="color: var(--primary-color, #66bb6a);"
                  />
                  <path
                    d="M22 2L15 22L11 13L2 9L22 2Z"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="color: var(--primary-color, #66bb6a);"
                  />
                </svg>
              </div>
              <div
                class="MuiBox-root css-13mz8d7"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="PhoneIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02z"
                  />
                </svg>
                <div
                  class="MuiStack-root css-nen11g-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1cjb6jo-MuiTypography-root"
                  >
                    Phone
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1dt3a0c-MuiTypography-root"
                  >
                    +91 8281627763
                  </p>
                </div>
              </div>
              <div
                class="MuiBox-root css-13mz8d7"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="EmailIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4-8 5-8-5V6l8 5 8-5z"
                  />
                </svg>
                <div
                  class="MuiStack-root css-nen11g-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1cjb6jo-MuiTypography-root"
                  >
                    Email
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1dt3a0c-MuiTypography-root"
                  >
                    hemanththanal@gmail.com
                  </p>
                </div>
              </div>
            </div>
            <form
              class="MuiBox-root css-178y8t2"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-t4j72s-MuiTypography-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="SendIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M2.01 21 23 12 2.01 3 2 10l15 2-15 2z"
                  />
                </svg>
                Send a Message
              </p>
              <div
                class="MuiStack-root css-1262us1-MuiStack-root"
              >
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined css-1n2g5bq-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="false"
                    for="_r_1p_"
                    id="_r_1p_-label"
                  >
                    Your Name
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-mzcsug-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall css-1k8o4fc-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1fe3xww-MuiInputBase-input-MuiOutlinedInput-input"
                      id="_r_1p_"
                      name="name"
                      required=""
                      type="text"
                      value=""
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-vy4cj6-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-1n64csd-MuiNotchedOutlined-root"
                      >
                        <span>
                          Your Name
                           
                          *
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined css-1n2g5bq-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="false"
                    for="_r_1q_"
                    id="_r_1q_-label"
                  >
                    Your Email
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-mzcsug-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall css-1k8o4fc-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1fe3xww-MuiInputBase-input-MuiOutlinedInput-input"
                      id="_r_1q_"
                      name="email"
                      required=""
                      type="email"
                      value=""
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-vy4cj6-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-1n64csd-MuiNotchedOutlined-root"
                      >
                        <span>
                          Your Email
                           
                          *
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1r06ag8-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="false"
                    for="_r_1r_"
                    id="_r_1r_-label"
                  >
                    Your Message
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-mzcsug-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-1y5nin8-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <textarea
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1h0x471-MuiInputBase-input-MuiOutlinedInput-input"
                      id="_r_1r_"
                      name="message"
                      required=""
                      rows="4"
                      style="height: 0px; overflow: hidden;"
                    />
                    <textarea
                      aria-hidden="true"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1h0x471-MuiInputBase-input-MuiOutlinedInput-input"
                      readonly=""
                      style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                      tabindex="-1"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-vy4cj6-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-1n64csd-MuiNotchedOutlined-root"
                      >
                        <span>
                          Your Message
                           
                          *
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
                <button
                  class="css-1ct0eo1"
                  type="submit"
                >
                  Send Message
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4olk8z-MuiSvgIcon-root"
                    data-testid="SendIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M2.01 21 23 12 2.01 3 2 10l15 2-15 2z"
                    />
                  </svg>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Contact matches snapshot (light mode) 1`] = `
<div>
  <section
    class="css-mvplxx"
    data-testid="contact-section"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
    >
      <div>
        <div>
          <h2
            class="css-74d2uv"
          >
            Get In Touch
          </h2>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-hv5og2-MuiTypography-root"
          >
            Have a project in mind or just want to say hello? Drop me a message and I'll get back to you as soon as possible.
          </p>
        </div>
        <div>
          <div
            class="MuiBox-root css-14xk4k4"
          >
            <div
              class="MuiBox-root css-zt8mqb"
            >
              <div
                class="MuiBox-root css-1rmagb3"
              >
                <svg
                  fill="none"
                  height="80"
                  style="margin: 0px auto 16px; display: block;"
                  viewBox="0 0 24 24"
                  width="80"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 2L11 13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="color: var(--primary-color, #66bb6a);"
                  />
                  <path
                    d="M22 2L15 22L11 13L2 9L22 2Z"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="color: var(--primary-color, #66bb6a);"
                  />
                </svg>
              </div>
              <div
                class="MuiBox-root css-4oyn16"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="PhoneIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02z"
                  />
                </svg>
                <div
                  class="MuiStack-root css-nen11g-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1ri17aw-MuiTypography-root"
                  >
                    Phone
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1e5jq14-MuiTypography-root"
                  >
                    +91 8281627763
                  </p>
                </div>
              </div>
              <div
                class="MuiBox-root css-4oyn16"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="EmailIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4-8 5-8-5V6l8 5 8-5z"
                  />
                </svg>
                <div
                  class="MuiStack-root css-nen11g-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1ri17aw-MuiTypography-root"
                  >
                    Email
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1e5jq14-MuiTypography-root"
                  >
                    hemanththanal@gmail.com
                  </p>
                </div>
              </div>
            </div>
            <form
              class="MuiBox-root css-cyn57v"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-m6pfw9-MuiTypography-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="SendIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M2.01 21 23 12 2.01 3 2 10l15 2-15 2z"
                  />
                </svg>
                Send a Message
              </p>
              <div
                class="MuiStack-root css-1262us1-MuiStack-root"
              >
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined css-nyr8g5-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="false"
                    for="_r_1l_"
                    id="_r_1l_-label"
                  >
                    Your Name
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ljffdk-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall css-pefnb4-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
                      id="_r_1l_"
                      name="name"
                      required=""
                      type="text"
                      value=""
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-1n64csd-MuiNotchedOutlined-root"
                      >
                        <span>
                          Your Name
                           
                          *
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined css-nyr8g5-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="false"
                    for="_r_1m_"
                    id="_r_1m_-label"
                  >
                    Your Email
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ljffdk-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall css-pefnb4-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
                      id="_r_1m_"
                      name="email"
                      required=""
                      type="email"
                      value=""
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-1n64csd-MuiNotchedOutlined-root"
                      >
                        <span>
                          Your Email
                           
                          *
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-ve18lb-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="false"
                    for="_r_1n_"
                    id="_r_1n_-label"
                  >
                    Your Message
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ljffdk-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-hes9w4-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <textarea
                      aria-invalid="false"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-w4nesw-MuiInputBase-input-MuiOutlinedInput-input"
                      id="_r_1n_"
                      name="message"
                      required=""
                      rows="4"
                      style="height: 0px; overflow: hidden;"
                    />
                    <textarea
                      aria-hidden="true"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-w4nesw-MuiInputBase-input-MuiOutlinedInput-input"
                      readonly=""
                      style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                      tabindex="-1"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-1n64csd-MuiNotchedOutlined-root"
                      >
                        <span>
                          Your Message
                           
                          *
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
                <button
                  class="css-1hlknzn"
                  type="submit"
                >
                  Send Message
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4olk8z-MuiSvgIcon-root"
                    data-testid="SendIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M2.01 21 23 12 2.01 3 2 10l15 2-15 2z"
                    />
                  </svg>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
